--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="30">
     <tr>
-      <td><img src="Images/CPR_Photo.png" alt="James Profile Picture" /></td>
+      <td><img src="CPR_Photo.png" alt="James Profile Picture" /></td>
       <td><h1>James Erwin Maribbay</h1>
       <p><em>Trainee for <strong><a href="https://en.wikipedia.org/wiki/Web_development">Web Page Development</a></strong></em></p>
       <p>I am a spirant web developer and I am continuing my studies in the field of programming😃</p></td>
